fixed header alignment

--- a/main.css
+++ b/main.css
@@ -62,7 +62,7 @@ footer {
     font-size: 32pt ;
     background-color: #4aaaa5;
     color: whitesmoke;
-    margin-left: 100px;
+    margin-left: 90px;
     margin-bottom: 0px;
     padding: 10px;
     height: 100%;
